--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <title>Landing Page</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
         <div class="section-1">
             <div class="header">
-                <p>Heder Logo</p>
+                <p>Header Logo</p>
                 <ul>
                     <li><a href="">header link one</a></li>
                     <li><a href="">header link two</a></li>
@@ -15,9 +16,9 @@
                 </ul>
             </div>
             <div class="hero">
-                <div claas="left">
-                    <p>This website is awesome</p>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div class="left">
+                    <p class="main-text">This website is awesome</p>
+                    <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button>Sign up</button>
                 </div>
                 <div class="right">
@@ -26,22 +27,22 @@
             </div>
         </div>
         <div class="section-2">
-            <div class="infos">
-                <p>Some random information</p>
+            <div class="information">
+                <p class="main-text">Some random information</p>
                 <div class="container">
-                    <div class="info">
+                    <div class="card">
                         <div>illustration</div>
                         <p>This is some subtext under an illustration or image</p>
                     </div>
-                    <div class="info">
+                    <div class="card">
                         <div>illustration</div>
                         <p>This is some subtext under an illustration or image</p>
                     </div>
-                    <div class="info">
+                    <div class="card">
                         <div>illustration</div>
                         <p>This is some subtext under an illustration or image</p>
                     </div>
-                    <div class="info">
+                    <div class="card">
                         <div>illustration</div>
                         <p>This is some subtext under an illustration or image</p>
                     </div>
@@ -50,8 +51,8 @@
         </div>
         <div class="section-3">
             <div class="quote">
-                <p>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is taht it looks nice</p>
-                <p>-Thor, God of Thunder</p>
+                <p class="text"><em>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is taht it looks nice</em></p>
+                <p class="by">-Thor, God of Thunder</p>
             </div>
         </div>
         <div class="section-4">
