--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
         </div>
         <div class="section-4">
             <div class="signup-card">
-                <p>Call to action! It's time!</p>
-                <p>Sign up for our product by clicking that button right over there</p>
-                <button>Sign up</button>
+                <div class="left">
+                    <p class="main-text">Call to action! It's time!</p>
+                    <p class="secondary-text">Sign up for our product by clicking that button right over there</p>
+                </div>
+                <div class="right">
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
         <div class="footer">
